<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_maps">Map</string>
    <string name="radius">500</string>
    <string name="connect_with_google">Sign in with Google</string>
    <string name="connect_with_facebook">Sign in with Facebook</string>


    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="workmates">Workmates</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="app_label">app_label</string>
    <string name="search_hint">Search_hint</string>
    <string name="search">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_restaurant">Image_restaurant</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sort_by">Sort by :</string>
    <string name="number_of_workmates">number of workmates</string>
    <string name="number_of_stars">number of stars</string>
    <string name="distance">distance</string>
    <string name="stars">stars</string>
    <string name="colleague">colleague</string>

</resources>
