<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MultiActivity">

    <!-- 1 | MainActivity RootView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"/>

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/window_sign_in"
            tools:context=".MultiActivity">

            <include
                android:id="@+id/fragment_map_view"
                layout="@layout/fragment_maps"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom">

                <!-- BUTTONS MAP VIEW -->
                <Button
                    android:id="@+id/map_view_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/default_margin"
                    android:paddingTop="@dimen/default_margin"
                    android:text="@string/map_view"
                    android:background="@android:color/white"
                    android:drawableTop="@drawable/baseline_map_white_24"/>

                <!-- BUTTONS LIST VIEW -->
                <Button
                    android:id="@+id/list_view_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/default_margin"
                    android:paddingTop="@dimen/default_margin"
                    android:text="@string/list_view"
                    android:background="@android:color/white"
                    android:drawableTop="@drawable/baseline_view_list_white_24"/>

                <!-- BUTTONS WORKMATES -->
                <Button
                    android:id="@+id/workmates_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/default_margin"
                    android:paddingTop="@dimen/default_margin"
                    android:text="@string/workmates"
                    android:background="@android:color/white"
                    android:drawableTop="@drawable/baseline_people_white_24"/>

            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

    <!-- 2 | NavigationView -->
    <android.support.design.widget.NavigationView
        android:id="@+id/activity_main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer_menu" />

</android.support.v4.widget.DrawerLayout>